--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,15 @@
     "@babel/preset-react": "^7.12.10",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^4.5.1",
+    "redux-devtools": "^3.7.0",
     "webpack": "^5.15.0",
     "webpack-cli": "^4.3.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   }
 }
